ingress/blog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: blog
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: blog-ingress
  namespace: default
spec:
  rules:
  - host: blog.kumarutsavanand.com
    http:
      paths:
      - backend:
          serviceName: blog
          servicePort: 80
        path: /
  tls:
  - hosts:
    - blog.kumarutsavanand.com
    - www.blog.kumarutsavanand.com
    secretName: letsencrypt
